--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.1",
     "react": "^19.1.1",
