Add VITE_API_URL to server environment configuration

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://coderoomadmin:coderoomadmin@cluster0.6ok3cln.mongodb.net/coderoom?retryWrites=true&w=majority&appName=Cluster0
+VITE_API_URL=https://coderoom-uzna.onrender.com
